<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".checkbox_radio_button_spinner.CheckboxRadioButtonSpinnerActivity"
    android:orientation="vertical"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp">

    <EditText
        android:id="@+id/employeeName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/name" />

    <EditText
        android:id="@+id/employeeEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:inputType="textEmailAddress" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/genderText"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/gender"
            />

        <RadioGroup
            android:id="@+id/employeeGender"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <RadioButton
                android:id="@+id/radioMale"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/male" />

            <RadioButton
                android:id="@+id/radioFemale"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/female" />
        </RadioGroup>
    </LinearLayout>

    <TextView
        android:id="@+id/skillText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_skills"/>

    <CheckBox
        android:id="@+id/checkJava"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/java"
        android:onClick="selectedLanguage"/>
    <CheckBox
        android:id="@+id/checkPHP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/php"
        android:onClick="selectedLanguage"/>

    <CheckBox
        android:id="@+id/checkPython"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/python"
        android:onClick="selectedLanguage"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/choose_skill_platform"
        android:textSize="18sp"
        android:textStyle="bold"/>

    <Spinner
        android:id="@+id/spinnerPlatform"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/choose_city"
        android:textSize="18sp"
        android:textStyle="bold"/>

    <Spinner
        android:id="@+id/spinnerCountry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/arrayCountry"
        android:layout_marginBottom="10dp"/>

    <Button
        android:id="@+id/empSubmitBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Submit"
        android:layout_gravity="right" />

</LinearLayout>