<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".alert_dialog.DialogActivity"
        android:orientation="vertical"
        android:gravity="center">

    <Button
        android:id="@+id/button_alert_1"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:text="@string/alert_dialog1"
        android:layout_gravity="center"
        android:textSize="12sp"
        android:layout_marginTop="15dp"/>

    <Button
        android:id="@+id/button_alert_2"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:text="@string/alert_dialog2"
        android:layout_gravity="center"
        android:textSize="12sp"/>

    <Button
        android:id="@+id/button_alert_3"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:text="@string/alert_dialog3"
        android:layout_gravity="center"
        android:textSize="12sp"/>

    <Button
        android:id="@+id/button_list"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:text="@string/simple_list"
        android:layout_gravity="center"
        android:textSize="12sp"/>

    <Button
        android:id="@+id/button_checkbox"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:text="@string/check_box"
        android:layout_gravity="center"
        android:textSize="12sp"/>

    <Button
        android:id="@+id/button_radio"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:text="@string/radio_button"
        android:layout_gravity="center"
        android:textSize="12dp"/>

    <EditText
        android:id="@+id/edit_date"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:inputType="date"
        android:hint="Date"
        android:textAlignment="center"/>

        <EditText
            android:id="@+id/edit_time"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:inputType="time"
            android:hint="Time"
            android:textAlignment="center"/>

    <Button
        android:id="@+id/button_custom_dialog"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:text="@string/custom_button"
        android:layout_gravity="center"
        android:textSize="12dp"/>

    </LinearLayout>
</ScrollView>

